--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         script: |
+          rm -rf nodejs-pm2-poc
           export NVM_DIR=~/.nvm
           source ~/.nvm/nvm.sh
           git clone https://github.com/praveenganeshcp/nodejs-pm2-poc
